# element

./: .env.example  .gitignore  PLAN.md  README.md  docker-compose.yml  package.json  Тестовое_задание_Fullstack.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/rest/: __init__.py  applications.py  auth.py  bookings.py  lot_sets.py  lots.py
backend/app/api/rpc/: __init__.py  dispatcher.py  errors.py  methods.py
backend/app/auth/: dependencies.py  jwt.py
backend/app/core/: alerts.py  errors.py  logging.py
backend/app/models/: __init__.py  application.py  booking.py  enums.py  lot.py  lot_set.py
backend/app/repositories/: applications.py  bookings.py  lot_sets.py  lots.py
backend/app/schemas/: application.py  booking.py  contact.py  lot.py  lot_set.py
backend/app/services/: applications.py  auth.py  bookings.py  exceptions.py  feed_parser.py  lot_sets.py  lots.py
backend/scripts/: ensure_schema.py  reset_schema.py
backend/tests/: conftest.py  helpers.py
backend/tests/integration/: test_lots_api.py  test_rpc.py
backend/tests/unit/: test_alerts.py  test_applications.py  test_bookings.py  test_contact_validation.py  test_feed_parser.py  test_lot_sets.py  test_lots_filtering.py
config/: app.env
e2e/: constants.ts  load-env.ts  package-lock.json  package.json  playwright.config.ts
e2e/fixtures/: feed.ts
frontend/: Dockerfile  index.html  package-lock.json  package.json
scripts/: test-all.mjs
(+31 files in other folders)
